--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 						<a href="#" class="after" data-toggle="main > aside:open"><i class="fa-solid fa-bars"></i></a>
 					</aside>
 					<figure class="imagen">
-						<img class="imgperfil" src="imagenes/15_foto_rles.jpg " alt="Imagen de perfil">
+						<img class="imgperfil" src="15_foto_rles.jpg " alt="Imagen de perfil">
 						<figcaption>Camila Castillo</figcaption>
 					</figure>
 
@@ -143,6 +143,6 @@
 			</footer>
 		</main>
 
-		<script src="js/main.js"></script>
+		<script src="main.js"></script>
 	</body>
 </html>
